infrastructure/controllers/_legacy/gateway-ingress/fallback-ingress-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fallback-to-ingress
  namespace: ingress-nginx
spec: 
  rules:
    - backendRefs:
      - name: ingress-nginx-controller
        port: 80
  parentRefs:
    - kind: Gateway
      name: https
      sectionName: https
      namespace: kgateway-system
