infrastructure/controllers/_legacy/gateway-ingress/httproute-ingress-domain.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-domains
  namespace: ingress-nginx
spec: 
  rules:
    - backendRefs:
      - name: ingress-nginx-controller
        port: 80
  parentRefs:
    - kind: Gateway
      name: https
      sectionName: https-ingress
      namespace: kgateway-system
